[gd_scene load_steps=11 format=2]

[ext_resource path="res://accesorios/scenes/game/game.gd" type="Script" id=1]
[ext_resource path="res://accesorios/sprites/tree/tree.png" type="Texture" id=2]
[ext_resource path="res://accesorios/sprites/piano/piano.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]

[sub_resource type="RectangleShape2D" id=7]

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="trees" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="trees"]
position = Vector2( 430, 300 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="trees"]
position = Vector2( 600, 300 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="trees"]
position = Vector2( 430, 330 )
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="trees"]
position = Vector2( 600, 330 )
texture = ExtResource( 2 )

[node name="Sprite5" type="Sprite" parent="trees"]
position = Vector2( 430, 360 )
texture = ExtResource( 2 )

[node name="Sprite6" type="Sprite" parent="trees"]
position = Vector2( 600, 360 )
texture = ExtResource( 2 )

[node name="Sprite7" type="Sprite" parent="trees"]
position = Vector2( 430, 390 )
texture = ExtResource( 2 )

[node name="Sprite8" type="Sprite" parent="trees"]
position = Vector2( 600, 390 )
texture = ExtResource( 2 )

[node name="Sprite9" type="Sprite" parent="trees"]
position = Vector2( 430, 420 )
texture = ExtResource( 2 )

[node name="Sprite10" type="Sprite" parent="trees"]
position = Vector2( 600, 420 )
texture = ExtResource( 2 )

[node name="Sprite23" type="Sprite" parent="trees"]
position = Vector2( 430, 151 )
texture = ExtResource( 2 )

[node name="Sprite24" type="Sprite" parent="trees"]
position = Vector2( 600, 151 )
texture = ExtResource( 2 )

[node name="Sprite25" type="Sprite" parent="trees"]
position = Vector2( 430, 181 )
texture = ExtResource( 2 )

[node name="Sprite26" type="Sprite" parent="trees"]
position = Vector2( 600, 181 )
texture = ExtResource( 2 )

[node name="Sprite27" type="Sprite" parent="trees"]
position = Vector2( 430, 211 )
texture = ExtResource( 2 )

[node name="Sprite28" type="Sprite" parent="trees"]
position = Vector2( 600, 211 )
texture = ExtResource( 2 )

[node name="Sprite29" type="Sprite" parent="trees"]
position = Vector2( 430, 241 )
texture = ExtResource( 2 )

[node name="Sprite30" type="Sprite" parent="trees"]
position = Vector2( 600, 241 )
texture = ExtResource( 2 )

[node name="Sprite31" type="Sprite" parent="trees"]
position = Vector2( 430, 271 )
texture = ExtResource( 2 )

[node name="Sprite32" type="Sprite" parent="trees"]
position = Vector2( 600, 271 )
texture = ExtResource( 2 )

[node name="Sprite33" type="Sprite" parent="trees"]
position = Vector2( 430, 8 )
texture = ExtResource( 2 )

[node name="Sprite34" type="Sprite" parent="trees"]
position = Vector2( 600, 8 )
texture = ExtResource( 2 )

[node name="Sprite43" type="Sprite" parent="trees"]
position = Vector2( 430, -30 )
texture = ExtResource( 2 )

[node name="Sprite44" type="Sprite" parent="trees"]
position = Vector2( 600, -30 )
texture = ExtResource( 2 )

[node name="Sprite45" type="Sprite" parent="trees"]
position = Vector2( 430, -90 )
texture = ExtResource( 2 )

[node name="Sprite46" type="Sprite" parent="trees"]
position = Vector2( 600, -90 )
texture = ExtResource( 2 )

[node name="Sprite47" type="Sprite" parent="trees"]
position = Vector2( 430, -60 )
texture = ExtResource( 2 )

[node name="Sprite48" type="Sprite" parent="trees"]
position = Vector2( 600, -60 )
texture = ExtResource( 2 )

[node name="Sprite49" type="Sprite" parent="trees"]
position = Vector2( 430, -120 )
texture = ExtResource( 2 )

[node name="Sprite50" type="Sprite" parent="trees"]
position = Vector2( 600, -120 )
texture = ExtResource( 2 )

[node name="Sprite51" type="Sprite" parent="trees"]
position = Vector2( 430, -150 )
texture = ExtResource( 2 )

[node name="Sprite52" type="Sprite" parent="trees"]
position = Vector2( 600, -150 )
texture = ExtResource( 2 )

[node name="Sprite53" type="Sprite" parent="trees"]
position = Vector2( 430, -240 )
texture = ExtResource( 2 )

[node name="Sprite54" type="Sprite" parent="trees"]
position = Vector2( 600, -240 )
texture = ExtResource( 2 )

[node name="Sprite55" type="Sprite" parent="trees"]
position = Vector2( 430, -180 )
texture = ExtResource( 2 )

[node name="Sprite56" type="Sprite" parent="trees"]
position = Vector2( 600, -180 )
texture = ExtResource( 2 )

[node name="Sprite57" type="Sprite" parent="trees"]
position = Vector2( 430, -210 )
texture = ExtResource( 2 )

[node name="Sprite58" type="Sprite" parent="trees"]
position = Vector2( 600, -210 )
texture = ExtResource( 2 )

[node name="Sprite59" type="Sprite" parent="trees"]
position = Vector2( 430, -270 )
texture = ExtResource( 2 )

[node name="Sprite60" type="Sprite" parent="trees"]
position = Vector2( 600, -270 )
texture = ExtResource( 2 )

[node name="Sprite61" type="Sprite" parent="trees"]
position = Vector2( 430, -300 )
texture = ExtResource( 2 )

[node name="Sprite62" type="Sprite" parent="trees"]
position = Vector2( 600, -300 )
texture = ExtResource( 2 )

[node name="Sprite35" type="Sprite" parent="trees"]
position = Vector2( 430, 38 )
texture = ExtResource( 2 )

[node name="Sprite36" type="Sprite" parent="trees"]
position = Vector2( 600, 38 )
texture = ExtResource( 2 )

[node name="Sprite37" type="Sprite" parent="trees"]
position = Vector2( 430, 68 )
texture = ExtResource( 2 )

[node name="Sprite38" type="Sprite" parent="trees"]
position = Vector2( 600, 68 )
texture = ExtResource( 2 )

[node name="Sprite39" type="Sprite" parent="trees"]
position = Vector2( 430, 98 )
texture = ExtResource( 2 )

[node name="Sprite40" type="Sprite" parent="trees"]
position = Vector2( 600, 98 )
texture = ExtResource( 2 )

[node name="Sprite41" type="Sprite" parent="trees"]
position = Vector2( 430, 128 )
texture = ExtResource( 2 )

[node name="Sprite42" type="Sprite" parent="trees"]
position = Vector2( 600, 128 )
texture = ExtResource( 2 )

[node name="Sprite11" type="Sprite" parent="trees"]
position = Vector2( 430, 450 )
texture = ExtResource( 2 )

[node name="Sprite12" type="Sprite" parent="trees"]
position = Vector2( 600, 450 )
texture = ExtResource( 2 )

[node name="Sprite13" type="Sprite" parent="trees"]
position = Vector2( 430, 480 )
texture = ExtResource( 2 )

[node name="Sprite14" type="Sprite" parent="trees"]
position = Vector2( 600, 480 )
texture = ExtResource( 2 )

[node name="Sprite15" type="Sprite" parent="trees"]
position = Vector2( 430, 510 )
texture = ExtResource( 2 )

[node name="Sprite16" type="Sprite" parent="trees"]
position = Vector2( 600, 510 )
texture = ExtResource( 2 )

[node name="Sprite17" type="Sprite" parent="trees"]
position = Vector2( 430, 540 )
texture = ExtResource( 2 )

[node name="Sprite18" type="Sprite" parent="trees"]
position = Vector2( 600, 540 )
texture = ExtResource( 2 )

[node name="Sprite19" type="Sprite" parent="trees"]
position = Vector2( 430, 570 )
texture = ExtResource( 2 )

[node name="Sprite20" type="Sprite" parent="trees"]
position = Vector2( 600, 570 )
texture = ExtResource( 2 )

[node name="Sprite21" type="Sprite" parent="trees"]
position = Vector2( 430, 570 )
texture = ExtResource( 2 )

[node name="Sprite22" type="Sprite" parent="trees"]
position = Vector2( 600, 570 )
texture = ExtResource( 2 )

[node name="Sprite63" type="Sprite" parent="trees"]
position = Vector2( 430, 600 )
texture = ExtResource( 2 )

[node name="Sprite64" type="Sprite" parent="trees"]
position = Vector2( 600, 600 )
texture = ExtResource( 2 )

[node name="Sprite65" type="Sprite" parent="trees"]
position = Vector2( 430, 630 )
texture = ExtResource( 2 )

[node name="Sprite66" type="Sprite" parent="trees"]
position = Vector2( 600, 630 )
texture = ExtResource( 2 )

[node name="Sprite67" type="Sprite" parent="trees"]
position = Vector2( 430, 690 )
texture = ExtResource( 2 )

[node name="Sprite68" type="Sprite" parent="trees"]
position = Vector2( 600, 690 )
texture = ExtResource( 2 )

[node name="Sprite69" type="Sprite" parent="trees"]
position = Vector2( 430, 660 )
texture = ExtResource( 2 )

[node name="Sprite70" type="Sprite" parent="trees"]
position = Vector2( 600, 660 )
texture = ExtResource( 2 )

[node name="Sprite71" type="Sprite" parent="trees"]
position = Vector2( 430, 720 )
texture = ExtResource( 2 )

[node name="Sprite72" type="Sprite" parent="trees"]
position = Vector2( 600, 720 )
texture = ExtResource( 2 )

[node name="Sprite73" type="Sprite" parent="trees"]
position = Vector2( 430, 750 )
texture = ExtResource( 2 )

[node name="Sprite74" type="Sprite" parent="trees"]
position = Vector2( 600, 750 )
texture = ExtResource( 2 )

[node name="piano" type="Node2D" parent="."]
position = Vector2( 450, 0 )
scale = Vector2( 1, 10 )

[node name="Sprite" type="Sprite" parent="piano"]
texture = ExtResource( 3 )

[node name="Sprite7" type="Sprite" parent="piano"]
position = Vector2( 0, -15 )
texture = ExtResource( 3 )

[node name="Sprite8" type="Sprite" parent="piano"]
position = Vector2( 0, -30 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="piano"]
position = Vector2( 0, 15 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="piano"]
position = Vector2( 0, 30 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="piano"]
position = Vector2( 0, 45 )
texture = ExtResource( 3 )

[node name="Sprite5" type="Sprite" parent="piano"]
position = Vector2( 0, 60 )
texture = ExtResource( 3 )

[node name="Sprite6" type="Sprite" parent="piano"]
position = Vector2( 0, 75 )
texture = ExtResource( 3 )

[node name="crash_left" type="StaticBody2D" parent="piano"]
position = Vector2( -17, 30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="piano/crash_left"]
scale = Vector2( 1, 5 )
shape = SubResource( 2 )

[node name="piano2" type="Node2D" parent="."]
position = Vector2( 590, 0 )
scale = Vector2( 1, 10 )

[node name="Sprite" type="Sprite" parent="piano2"]
texture = ExtResource( 3 )

[node name="Sprite7" type="Sprite" parent="piano2"]
position = Vector2( 0, -15 )
texture = ExtResource( 3 )

[node name="Sprite8" type="Sprite" parent="piano2"]
position = Vector2( 0, -30 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="piano2"]
position = Vector2( 0, 15 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="piano2"]
position = Vector2( 0, 30 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="piano2"]
position = Vector2( 0, 45 )
texture = ExtResource( 3 )

[node name="Sprite5" type="Sprite" parent="piano2"]
position = Vector2( 0, 60 )
texture = ExtResource( 3 )

[node name="Sprite6" type="Sprite" parent="piano2"]
position = Vector2( 0, 75 )
texture = ExtResource( 3 )

[node name="crash_right" type="StaticBody2D" parent="piano2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="piano2/crash_right"]
position = Vector2( 0, 30 )
scale = Vector2( 1, 5 )
shape = SubResource( 3 )

[node name="AreaReset" type="Area2D" parent="."]
position = Vector2( 512, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaReset"]
scale = Vector2( 20, 1 )
shape = SubResource( 1 )

[node name="area_spawn_npc_1" type="Area2D" parent="."]
position = Vector2( 470, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_spawn_npc_1"]
shape = SubResource( 4 )

[node name="area_spawn_npc_2" type="Area2D" parent="."]
position = Vector2( 512, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_spawn_npc_2"]
shape = SubResource( 5 )

[node name="area_spawn_npc_3" type="Area2D" parent="."]
position = Vector2( 550, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_spawn_npc_3"]
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="AreaResetNpc" type="Area2D" parent="."]
position = Vector2( 512, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaResetNpc"]
position = Vector2( 0, -200 )
scale = Vector2( 9, 1 )
shape = SubResource( 7 )
